# graph-RAG

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  QUICKSTART.md  README.md  fix_datetime.py  fix_default_factory.py  fix_print_statements.py  fix_timezone_imports.py  main.py  package-lock.json  package.json  pyproject.toml  refactor_di.py  start-server.bat  start-server.sh  start-worker.bat  start-worker.sh
.github/prompts/: Solution_Architecture.prompt.md
.github/workflows/: sync_to_hf.yml
artifacts/graphify-out/: manifest.json
benchmarks/: run_benchmark.py
data/uploads/: .gitkeep
frontend/: app.py  requirements.txt
frontend-react/: package-lock.json  package.json  vite.config.ts
frontend-react/src/: App.tsx  index.css
frontend-react/src/components/: GraphCanvas.tsx
frontend-react/src/context/: AuthContext.tsx
frontend-react/src/types/: api.ts
frontend-react/src/views/: AdminDashboard.tsx  Home.tsx  InsightsView.tsx  InteractionView.tsx  Login.tsx  Ontology.tsx  Process.tsx  SettingsView.tsx  SimulationRunView.tsx
src/graph_rag_service/: __init__.py  config.py  main.py
src/graph_rag_service/api/: admin.py  auth.py  dependencies.py  models.py  server.py  simulation.py
src/graph_rag_service/api/routers/: auth.py  documents.py  entities.py  evaluation.py  graph.py  memory.py  ontology.py  query.py  report.py  system.py
src/graph_rag_service/core/: abstractions.py  entity_resolver.py  llm_factory.py  models.py  neo4j_store.py  storage.py
src/graph_rag_service/ingestion/: document_processor.py  extractor.py  ontology_generator.py  persona_generator.py  pipeline.py  web_crawler.py
src/graph_rag_service/observability/: tracing.py
src/graph_rag_service/retrieval/: agent.py  communities.py  hippo_tool.py  report_agent.py  tools.py
src/graph_rag_service/services/: __init__.py  entity_enricher.py  graph_memory_updater.py  ontology_drift_detector.py
src/graph_rag_service/workers/: celery_worker.py  simulation_runner.py
src/graphify-out/: .graphify_analysis.json  graph.json
tests/: test_core.py  test_document_tenant_isolation.py
